--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header-bar conteiner">
+            <img src="img/logo.svg" alt="logo real state">
+            <nav class="navbar">
+                <a href="#">Nosotros</a>
+                <a href="#">Propiedades</a>
+                <a href="#">Blog</a>
+                <a href="#">Testimoniales</a>
+                <a href="#">Contacto</a>
+            </nav>
+        </div>
+        <div class="conteiner">
+            <div class="header-content">
+                <h1>Encuentra tu casa de lujo al mejor precio</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora minus eius a aspernatur placeat repellendus? Tempore, in incidunt. Odio reprehenderit corporis.</p>
+                <img src="img/imagenHeader.jpg" alt="image header">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
