add properties section

--- a/index.html
+++ b/index.html
@@ -34,5 +34,71 @@
             </div>
         </div>
     </header>
+    <main class="properties conteiner">
+        <h2 class="heading">Nuestras <span>Propiedades</span></h2>
+
+        <div class="properties-list">
+            <div class="property">
+                <div class="property-img">    
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+            <div class="property">
+                <div class="property-img">
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+            <div class="property">
+                <div class="property-img">
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+            <div class="property">
+                <div class="property-img">
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+            <div class="property">
+                <div class="property-img">
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+            <div class="property">
+                <div class="property-img">
+                    <h3>Casa de Lujo con 3 Cuartos</h3>
+                </div>
+                <div class="property-info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quaerat beatae vitae exercitationem neque laboriosam nulla consectetur, accusantium nemo repellat blanditiis explicabo molestias non omnis repudiandae culpa veritatis dolor architecto</p>
+                    <p class="price">$ 1,200,000.00</p>
+                    <a href="#">En propiedad</a>
+                </div>
+            </div> <!-- .property -->
+        </div>
+    </main>
 </body>
 </html>
