add featured section

--- a/index.html
+++ b/index.html
@@ -100,5 +100,15 @@
             </div> <!-- .property -->
         </div>
     </main>
+    <section class="featured">
+        <div class="featured-grid">
+            <div class="featured-content">
+                <h3>Propiedad Destacada</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium aspernatur omnis facilis perspiciatis ab adipisci sapiente illo dignissimos quod. Corporis quam nam voluptas iusto maiores consequuntur totam illum odio assumenda?</p>
+                <p class="price">$1,200,000.00</p>
+                <a href="#">Ver Propiedad</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
