--- a/index.html
+++ b/index.html
@@ -159,5 +159,28 @@
             </div> <!-- .post  -->
         </section>
     </div>
+    <footer class="footer">
+        <div class="footer-grid conteiner">
+            <div class="footer-nav">
+                <h3>Navegación</h3>
+                <nav>
+                    <a href="#">Nosotros</a>
+                    <a href="#">Propiedades</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Testimoniales</a>
+                    <a href="#">Contacto</a>
+                </nav>
+            </div>
+            <div class="footer-us">
+                <h3>Nosotros</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, veritatis? Facilis recusandae corrupti deleniti neque eveniet temporibus aliquam vel, perferendis nisi tempore voluptas impedit veniam fugit dolorum fuga quia animi?</p>
+            </div>
+            <div class="footer-img">
+                <img src="img/logo.svg" alt="imagen logo">
+            </div>
+        </div>
+
+        <p class="copyright">Todos los Derechos Reservador Real State</p>
+    </footer>
 </body>
 </html>
