--- a/index.html
+++ b/index.html
@@ -182,5 +182,7 @@
 
         <p class="copyright">Todos los Derechos Reservador Real State</p>
     </footer>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
